--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 	<h2>Converted code:</h2>
 	<textarea class="converted-code" cols="100" rows="15"></textarea>
 
-	<script src="src/index.js">
+	<script src="js/index.js">
 	</script>
 </body>
 
