--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<div id="app"></div>
 
 	<h1>Code converter</h1>
-	<p>This tool replaces characters in source code to  thei cyrillyc equivalents, so code looks like regular but can't be executed without fixing. Used for quizzes</p> 
+	<p>This tool replaces characters in source code to same-looking equivalents but with other char codes, so code looks like regular but can't be executed without fixing. Used for quizzes</p> 
 	<h2>Source Code:</h2>
 	<textarea class="source-code" cols="100" rows="15"></textarea>
 
